--- a/rent-project/package.json
+++ b/rent-project/package.json
@@ -11,14 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.3",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.1.2",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
     "@angular/core": "~8.0.3",
     "@angular/forms": "~8.0.3",
+    "@angular/material": "^8.1.2",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "bootstrap": "4.1.1",
+    "bs-stepper": "^1.7.0",
+    "car-query": "^1.0.8",
+    "hammerjs": "^2.0.8",
+    "ngx-bootstrap": "^5.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
