--- a/rent-project/package.json
+++ b/rent-project/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.7",
+    "@angular-material-extensions/google-maps-autocomplete": "^2.0.0",
     "@angular/animations": "^8.0.3",
     "@angular/cdk": "^8.1.2",
     "@angular/common": "~8.0.3",
@@ -21,11 +23,13 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@types/googlemaps": "^3.37.0",
     "bootstrap": "4.1.1",
     "bs-stepper": "^1.7.0",
     "car-query": "^1.0.8",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-google-places-autocomplete": "^2.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -35,9 +39,10 @@
     "@angular/cli": "~8.0.6",
     "@angular/compiler-cli": "~8.0.3",
     "@angular/language-service": "~8.0.3",
-    "@types/node": "~8.9.4",
+    "@types/googlemaps": "^3.37.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
