--- a/rent-project/package.json
+++ b/rent-project/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@types/googlemaps": "^3.37.0",
     "bootstrap": "4.1.1",
     "bs-stepper": "^1.7.0",
