--- a/rent-project/package.json
+++ b/rent-project/package.json
@@ -29,8 +29,10 @@
     "bs-stepper": "^1.7.0",
     "car-query": "^1.0.8",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.0",
     "ngx-google-places-autocomplete": "^2.0.4",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
