--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.0",
     "ngx-google-places-autocomplete": "^2.0.4",
+    "ngx-page-scroll": "^6.0.2",
+    "ngx-page-scroll-core": "^6.0.2",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
