--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@auth0/angular-jwt": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@types/googlemaps": "^3.37.0",
     "bootstrap": "4.1.1",
@@ -30,6 +31,7 @@
     "car-query": "^1.0.8",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^5.1.0",
     "ngx-google-places-autocomplete": "^2.0.4",
     "ngx-page-scroll": "^6.0.2",
