--- a/package.json
+++ b/package.json
@@ -24,15 +24,22 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "@auth0/angular-jwt": "^3.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@fortawesome/fontawesome-free": "^5.10.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@types/chart.js": "^2.8.4",
     "@types/googlemaps": "^3.37.0",
-    "bootstrap": "4.1.1",
+    "angular-bootstrap-md": "^8.2.0",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.3.1",
     "bs-stepper": "^1.7.0",
     "car-query": "^1.0.8",
+    "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
+    "mdbootstrap": "^4.8.8",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-gallery": "^5.10.0",
     "ngx-google-places-autocomplete": "^2.0.4",
     "ngx-page-scroll": "^6.0.2",
     "ngx-page-scroll-core": "^6.0.2",
