--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "mdbootstrap": "^4.8.8",
+    "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime-highlight": "^5.0.0-beta.12",
+    "ng-pick-datetime-moment": "^1.0.8",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-file-drop": "^8.0.8",
     "ngx-gallery": "^5.10.0",
     "ngx-google-places-autocomplete": "^2.0.4",
     "ngx-page-scroll": "^6.0.2",
